--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,14 @@
 .container {
     position: relative;
     width: 100%;
-    height: 100%;
+    height: 700px;
     background-color: lightgreen;
 }
 
 .shutter {
     position: relative;
     width: 100px;
-    height: 100%;
+    height: 100px;
     background-color: green;
+    margin: 20px;
 }
