--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,9 @@
 .container {
-    position: relative;
-    width: 100%;
-    height: 700px;
+    position: absolute;
+    left: 20px;
+    right: 20px;
+    top: 20px;
+    bottom: 20px;
     background-color: lightgreen;
     padding: 20px;
 }
@@ -9,7 +11,6 @@
 .shutter {
     position: relative;
     display: inline-block;
-    left: 100px;
     width: 100px;
     height: 100px;
     background-color: green;
