--- a/styles.css
+++ b/styles.css
@@ -15,4 +15,7 @@
     height: 100px;
     background-color: green;
     margin: 20px;
+    font-size: large;
+    color: white;
+    padding: 10px;
 }
