--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.container {
+#container {
     position: absolute;
     left: 20px;
     right: 20px;
@@ -7,6 +7,7 @@
     background-color: royalblue;
     padding: 20px;
     overflow: hidden;
+    text-align: center;
 }
 
 .shutter {
