--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@
     padding: 20px;
     overflow: hidden;
     text-align: center;
+    font-family: 'Sniglet', cursive;
+    font-weight: 400;
 }
 
 .shutter {
@@ -18,9 +20,25 @@
     background-color: darkblue;
     margin: 20px;
     padding: 10px;
-    font-family: 'Sniglet', cursive;
+    /*font-family: 'Sniglet', cursive;*/
     font-weight: 800;
     font-size: 60px;
     color: royalblue;
     cursor: pointer;
+}
+
+#close {
+    height: 20px;
+    width: 20px;
+    display: block;
+    position: absolute;
+    top: -18px;
+    left: -18px;
+    background-color: #cc0000;
+    color: white;
+    padding: 3px;
+    border-radius: 50%;
+    text-align: center;
+    font-family: 'Sniglet', cursive;
+    cursor: not-allowed
 }
