--- a/css/westeann.css
+++ b/css/westeann.css
@@ -4,9 +4,10 @@
 }
 
 .godjulwesteann {
-	margin-top:250px;
+	margin-top:200px;
 	color:#ffffff;
 	font-size:130px;
+    z-index: 3000;
 }
 
 #closewesteann {
@@ -22,4 +23,8 @@
     text-align: center;
     font-family: 'Sniglet', cursive;
     cursor: not-allowed;
+}
+
+#landscape_picture {
+    z-index:-2000;
 }
