--- a/css/westeann.css
+++ b/css/westeann.css
@@ -6,10 +6,11 @@
 .godjulwesteann {
 	margin-top:200px;
 	color:#ffffff;
-	font-size:110px;
+	font-size:80px;
     z-index: 3000;
     float:left;
-    margin-left:70px;
+    margin-left:10%;
+    text-shadow: 0 0 24px #0000ff;
 }
 
 #closewesteann {
