--- a/css/haviamat.css
+++ b/css/haviamat.css
@@ -2,3 +2,16 @@
     text-shadow: 0 0 24px #8BBFFF;
     color: #8BBFFF;
 }
+
+#john_cena_picture {
+    z-index:-2000;
+}
+
+.cena_text {
+    margin-top:200px;
+    color:#ffffff;
+    font-size:110px;
+    z-index: 3000;
+    float:left;
+    margin-left:70px;
+}
