--- a/css/glasberj.css
+++ b/css/glasberj.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Lobster);
+
 #glasberj {
     text-shadow: 0 0 24px #DD74E8;
     color: #BF36CE;
