--- a/css/bergheme.css
+++ b/css/bergheme.css
@@ -1,3 +1,15 @@
+body {
+	overflow: hidden;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+img {
+	width: 100%;
+	height: 100%;
+}
+
 #bergheme {
     text-shadow: 0 0 24px #8F007F;
     color: #8F007F;
