--- a/css/westeann.css
+++ b/css/westeann.css
@@ -3,6 +3,11 @@
     color: #33ccff;
 }
 
+#westeann-2 {
+    text-shadow: 0 0 24px #0000ff;
+    color: #FF3296;
+}
+
 .godjulwesteann {
 	display:block;
 	margin-top:150px;
