--- a/css/westeann.css
+++ b/css/westeann.css
@@ -1,47 +1,12 @@
 #westeann {
     text-shadow: 0 0 24px #0000ff;
-    color: #33ccff;
-}
-
-#westeann-2 {
-    text-shadow: 0 0 24px #0000ff;
     color: #FF3296;
 }
 
-.godjulwesteann {
-	display:block;
-	margin-top:150px;
-	color:#ffffff;
-	font-size:80px;
-    z-index: 3000;
-    margin-left:10%;
-	max-width:310px;
-    text-shadow: 0 0 24px #0000ff;
+#jul {
+	text-shadow: 0 0 24px #0000ff;
 }
 
-#closewesteann {
-    height: 20px;
-    width: 20px;
-    display: block;
-    position: absolute;
-    top: -18px;
-    left: -18px;
-    background-color: #33ccff;
-    padding: 3px;
-    border-radius: 50%;
-    text-align: center;
-    font-family: 'Sniglet', cursive;
-    cursor: not-allowed;
+.closable {
+	left:10% !important;
 }
-
-#landscape_picture {
-    z-index:-2000;
-}
-
-.newDivzz {
-	max-width:300px;
-	display:block;
-	margin-left:10%;
-        color: #fff;
-		font-size : 20px;
-		 }
